[layout] Fix vertical alignment of main nav icons

--- a/src/globals.css
+++ b/src/globals.css
@@ -512,3 +512,17 @@ astro-island[component-export="GraphQLEditor"] {
   }
 }
 
+header.header {
+  padding-top: 0;
+  padding-bottom: 0;
+  display: flex;
+  > div {
+    width: 100%;
+  }
+}
+
+.DocSearch-Button {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  transform: translateX(0.5rem);
+}
